# DriftGuard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: annotation-guide.md  anthropic-probe-runbook.md  benchmark-card.md  experiment-manifest.md  failure-atlas.md  prompt-pack-manifest.md  reproducibility-guide.md  roadmap.md  scenario-authoring-guide.md  shadow-holdout.md  technical-report.md
driftguard/: __init__.py  __main__.py  agent.py  agent_backends.py  analysis.py  annotation.py  benchmark_audit.py  calibration.py  cli.py  contexts.py  detector_training.py  detectors.py  experiments.py  graders.py  ledger.py  perturbations.py  policies.py  prompting.py  registry.py  reporting.py  runner.py  schemas.py  serialization.py  traces.py
reports/: benchmark_snapshot.md  dev_wave2_context_ablation.md  dev_wave2_intervention_ablation.md  dev_wave3_context_ablation.md  dev_wave3_intervention_ablation.md  failure_atlas.md  technical_report.md  test_wave1_baselines.md  test_wave2_baselines.md  test_wave2_selected_policy.md  validation_wave2_context_ablation.md  validation_wave2_intervention_failure_atlas.md  validation_wave2_intervention_selection.md  validation_wave2_intervention_selection_v3.md
scripts/: run_anthropic_probe.py
tests/: test_agent_backends.py  test_analysis.py  test_annotation.py  test_benchmark_audit.py  test_calibration.py  test_detector_training.py  test_experiments.py  test_graders.py  test_ledger.py  test_perturbations.py  test_policies.py  test_registry_and_schema.py  test_reporting.py  test_runner_and_replay.py
(+70 files in other folders)
